2008-06-25  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-window.c
	(vgl_bookmark_window_show):
	Move the static bookmark_window variable to
	vgl_bookmark_window_show() and clear it using a weak pointer.
	(play_selected_row, close_button_clicked, vgl_bookmark_window_init)
	(vgl_bookmark_window_close):
	Make vgl_bookmark_window_close() receive the window to be
	destroyed instead of using the singleton.

	* configure.ac: Don't enable media player keys if there's no D-BUS
	support.

2008-06-25  Mario Sanchez Prada <msanchez@igalia.com>

	* configure.ac:
	* src/dbus.c:
	* src/dbus.h:
	Add support for the media player keys present in some keyboards
	via the Gnome Settings Daemon.

2008-06-19  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am: Install vagalumectl manpage only in the Gnome
	version

	* ChangeLog: added ChangeLog file

2008-06-18  Mario Sanchez Prada <msanchez@igalia.com>

	* Makefile.am
	* vagalume.1
	* vagalumectl.1
	Add manpage for vagalumectl

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* src/vgl-bookmark-window.c
	Make the treeview in the bookmark window reorderable

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* INSTALL
	Instructions to compile Vagalume for Moblin

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* configure.ac
	Test whether to install vagalume.service in Gnome

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* debian/gconf-defaults
	* debian/rules
	Install lastfm:// URL handler

2008-06-18  Mario Sanchez Prada <msanchez@igalia.com>

	* src/dbus.c
	* src/dbus.h
	* src/vgl-sb-plugin.c
	Broadcast Vagalume status via dbus

	Clear the VglSbPlugin using dispose() instead of finalize()

	Fix interactive mode in love/ban dbus handlers

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* Makefile.am
	* data/moblin
	* data/moblin/cover.png
	Added Moblin version of cover.png

2008-06-18  Alberto Garcia <agarcia@igalia.com>

	* configure.ac
	Fix compilation problem with dbus < 1.0
